#51 remove unsupported java language feature